Fix spacing in Header and HeaderNav

--- a/src/components/Header/_header_nav.scss
+++ b/src/components/Header/_header_nav.scss
@@ -23,7 +23,6 @@
 
 @include media-breakpoint-down(sm) {
   .header_nav.scrollable {
-    margin-right: -15px;
     max-width: 100%;
     position: relative;
 
